<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="conversion_from">Convert from...</string>
    <string name="conversion_to">Convert to...</string>
    <string name="conversion_amount">Amount to convert...</string>
    <string name="convert">Convert</string>
    <string name="default_source">USD</string>
    <string name="default_convert">Every Currency</string>
</resources>
