<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <AutoCompleteTextView
        android:id="@+id/convert_from_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="0"
        android:completionThreshold="1"
        android:hint="@string/conversion_from"
        android:text="@string/default_source"/>

    <AutoCompleteTextView
        android:id="@+id/convert_to_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="0"
        android:completionThreshold="1"
        android:hint="@string/conversion_to"
        android:text="@string/default_convert"/>

    <EditText
        android:id="@+id/convert_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/conversion_amount"
        android:inputType="number"/>

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>

   <android.support.v7.widget.RecyclerView
       android:id="@+id/conversion_list"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:visibility="gone"/>

</LinearLayout>